--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@ngrx/store": "^16.0.1",
+    "@ngrx/store-devtools": "^16.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -26,6 +28,7 @@
     "@angular-devkit/build-angular": "^14.0.7",
     "@angular/cli": "~14.0.7",
     "@angular/compiler-cli": "^14.0.0",
+    "@ngrx/schematics": "^16.0.1",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
